# Arabic_English_Translator

./: README.md  building_ar_en_translation_model.ipynb  building_ar_en_translation_model.py  main.py  model.py  pyproject.toml  translator_test.ipynb  ui.py
static/: script.js  style.css
templates/: index.html
