[project]
name = "translation-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "torch",
    "jinja2",
    "streamlit>=1.58.0",
    "torchvision",
    "transformers==4.56.1",
    "sentencepiece",
    "safetensors",
    "huggingface_hub"
]
